limitations under the License.
////
= TinkerPop3 CHANGELOG

== TinkerPop 3.8.0 (NOT OFFICIALLY NAMED YET)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-standing.png[width=185]

[[release-3-8.0]]
=== TinkerPop 3.8.0 (Release Date: NOT OFFICIALLY RELEASED YET)

This release also includes changes from <<release-3-7-XXX, 3.7.XXX>>.

* Added UUID() + UUID(value) to grammar
* Modified `TraversalStrategy` construction in Javascript where configurations are now supplied as a `Map` of options.
* Fixed bug in GraphSON v2 and v3 where full round trip of `TraversalStrategy` implementations was failing.
* Added missing strategies to the `TraversalStrategies` global cache as well as `CoreImports` in `gremlin-groovy`.
* Modified the `TraversalStrategy` format for GraphSON v2 and v3 so that it could work with `Bytecode` based requests.
* Added a `Class` serializer to GraphBinary in Javascript and modified the `TraversalStrategy` serializer to use it so that specification was properly satisfied.
* Added missing strategies to `strategies.py` in `gremlin-python`.
* Fixed fully qualified class names for `TraversalStrategy` names in `gremlin-dotnet`.
* Updated `OptionsStrategy` in `gremlin-python` to take options directly as keyword arguments.
* Added static `instance()` method to `ElementIdStrategy` to an instance with the default configuration.
* Updated `ElementIdStrategy.getConfiguration()` to help with serialization.
* Added grammar-based `Translator` for all languages including explicit ones for Java and anonymization.
* Deprecated `withEmbedded()` and `withRemote()` options on `AnonymousTraversalSource`.
* Added `with()` on `AnonymousTraversalSource` to cover both embedded and remote creation options.
* Added support for `Set` in GraphSON and GraphBinary serialization for `gremlin-javascript`, where it previously just converted to array.
* Added `Set` syntax in `gremlin-language`.